# animal-loader

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
lua/: modinfo.lua  modmain.lua
src/: lib.rs
