[package]
name = "animal-loader"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A Native Mod Loader for Don't Starve Together"
documentation = "https://docs.rs/animal-loader"
readme = "README.md"
homepage = "https://github.com/ewpratten/animal-loader"
repository = "https://github.com/ewpratten/animal-loader"
license = "GPL-3.0"
keywords = []
categories = []

[lib]
name = "animal"
crate-type = ["cdylib"]

[dependencies]
